--- a/source/catalog.html
+++ b/source/catalog.html
@@ -73,7 +73,7 @@
         </li>
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-2-desktop@1x.png 1x, images/catalog-2-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="168" height="206">
@@ -103,7 +103,7 @@
 
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-3-tablet@1x.png 1x, images/catalog-3-tablet@2x.png 2x" width="164" height="175">
                 <img class="product-card__image" src="images/catalog-3-mobile@1x.png" srcset="images/catalog-3-mobile@2x.png 2x" alt="Зеленая упаковка" width="68" height="78">
@@ -132,7 +132,7 @@
 
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-4-desktop@1x.png 1x, images/catalog-4-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-4-tablet@1x.png 1x, images/catalog-4-tablet@2x.png 2x" width="168" height="200">
@@ -162,7 +162,7 @@
 
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-5-tablet@1x.png 1x, images/catalog-5-tablet@2x.png 2x" width="161" height="172">
                 <img class="product-card__image" src="images/catalog-5-mobile@1x.png" srcset="images/catalog-5-mobile@2x.png 2x" alt="Синяя упаковка" width="68" height="78">
@@ -191,7 +191,7 @@
 
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-6-desktop@1x.png 1x, images/catalog-6-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-6-tablet@1x.png 1x, images/catalog-6-tablet@2x.png 2x" width="168" height="200">
@@ -221,7 +221,7 @@
 
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-7-tablet@1x.png 1x, images/catalog-7-tablet@2x.png 2x" width="164" height="175">
                 <img class="product-card__image" src="images/catalog-7-mobile@1x.png" srcset="images/catalog-7-mobile@2x.png 2x" alt="Фиолетовая упаковка" width="72" height="84">
