--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,7 +29,7 @@
           <a class="main-nav__link" href="index.html">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--current" href="#">Каталог продукции</a>
+          <a class="main-nav__link main-nav__link--current" href="catalog.html" aria-current="page">Каталог продукции</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="program.html">Подбор программы</a>
@@ -65,7 +65,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">700 ₽</dd>
+                <dd class="product-card__desc-value">700 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -94,7 +94,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">1000 ₽</dd>
+                <dd class="product-card__desc-value">1000 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -123,7 +123,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">700 ₽</dd>
+                <dd class="product-card__desc-value">700 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -153,7 +153,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">1000 ₽</dd>
+                <dd class="product-card__desc-value">1000 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -182,7 +182,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">400 ₽</dd>
+                <dd class="product-card__desc-value">400 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -212,7 +212,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">700 ₽</dd>
+                <dd class="product-card__desc-value">700 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -241,7 +241,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">500 ₽</dd>
+                <dd class="product-card__desc-value">500 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -268,25 +268,25 @@
         <li class="catalog-extra__item product">
           <h3 class="product__title">Сахарозаменитель</h3>
           <p class="product__count">1 упаковка (100 г)</p>
-          <p class="product__price">200 ₽</p>
+          <p class="product__price">200 <span>&#8381;</span></p>
           <button class="product__button button" type="button">Заказать</button>
         </li>
         <li class="catalog-extra__item product">
           <h3 class="product__title">Питьевая вода</h3>
           <p class="product__count">5 литров</p>
-          <p class="product__price">50 ₽</p>
+          <p class="product__price">50 <span>&#8381;</span></p>
           <button class="product__button button" type="button">Заказать</button>
         </li>
         <li class="catalog-extra__item product">
           <h3 class="product__title">Молоко</h3>
           <p class="product__count">1 литр</p>
-          <p class="product__price">100 ₽</p>
+          <p class="product__price">100 <span>&#8381;</span></p>
           <button class="product__button button" type="button">Заказать</button>
         </li>
         <li class="catalog-extra__item product">
           <h3 class="product__title">Витамины</h3>
           <p class="product__count">1 упаковка (30 г)</p>
-          <p class="product__price">300 ₽</p>
+          <p class="product__price">300 <span>&#8381;</span></p>
           <button class="product__button button" type="button">Заказать</button>
         </li>
       </ul>
