--- a/source/catalog.html
+++ b/source/catalog.html
@@ -55,6 +55,9 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog-1-tablet@1x.webp 1x, images/catalog-1-tablet@2x.webp 2x" width="161" height="172">
+                <source type="image/webp" srcset="images/catalog-1-mobile@1x.webp 1x, images/catalog-1-mobile@2x.webp 2x" width="68" height="86">
+
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-1-tablet@1x.png 1x, images/catalog-1-tablet@2x.png 2x" width="161" height="172">
                 <img class="product-card__image" src="images/catalog-1-mobile@1x.png" srcset="images/catalog-1-mobile@2x.png 2x" alt="Оранжевая упаковка" width="68" height="86">
               </picture>
@@ -83,6 +86,10 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/catalog-2-desktop@1x.webp 1x, images/catalog-2-desktop@2x.webp 2x" width="169" height="196">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.webp 1x, images/catalog-2-tablet@2x.webp 2x" width="168" height="206">
+                <source type="image/webp" srcset="images/catalog-2-mobile@1x.webp 1x, images/catalog-2-mobile@2x.webp 2x" width="84" height="100">
+
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-2-desktop@1x.png 1x, images/catalog-2-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="168" height="206">
                 <img class="product-card__image" src="images/catalog-2-mobile@1x.png" srcset="images/catalog-2-mobile@2x.png 2x" alt="Оранжевая упаковка побольше" width="84" height="100">
@@ -113,6 +120,9 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog-3-tablet@1x.webp 1x, images/catalog-3-tablet@2x.webp 2x" width="164" height="175">
+                <source type="image/webp" srcset="images/catalog-3-mobile@1x.webp 1x, images/catalog-3-mobile@2x.webp 2x" width="68" height="78">
+
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-3-tablet@1x.png 1x, images/catalog-3-tablet@2x.png 2x" width="164" height="175">
                 <img class="product-card__image" src="images/catalog-3-mobile@1x.png" srcset="images/catalog-3-mobile@2x.png 2x" alt="Зеленая упаковка" width="68" height="78">
               </picture>
@@ -142,6 +152,10 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/catalog-4-desktop@1x.webp 1x, images/catalog-4-desktop@2x.webp 2x" width="169" height="196">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog-4-tablet@1x.webp 1x, images/catalog-4-tablet@2x.webp 2x" width="168" height="200">
+                <source type="image/webp" srcset="images/catalog-4-mobile@1x.webp 1x, images/catalog-4-mobile@2x.webp 2x" width="84" height="100">
+
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-4-desktop@1x.png 1x, images/catalog-4-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-4-tablet@1x.png 1x, images/catalog-4-tablet@2x.png 2x" width="168" height="200">
                 <img class="product-card__image" src="images/catalog-4-mobile@1x.png" srcset="images/catalog-4-mobile@2x.png 2x" alt="Зеленая упаковка побольше" width="84" height="100">
@@ -172,6 +186,9 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog-5-tablet@1x.webp 1x, images/catalog-5-tablet@2x.webp 2x" width="161" height="172">
+                <source type="image/webp" srcset="images/catalog-5-mobile@1x.webp 1x, images/catalog-5-mobile@2x.webp 2x" width="68" height="78">
+
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-5-tablet@1x.png 1x, images/catalog-5-tablet@2x.png 2x" width="161" height="172">
                 <img class="product-card__image" src="images/catalog-5-mobile@1x.png" srcset="images/catalog-5-mobile@2x.png 2x" alt="Синяя упаковка" width="68" height="78">
               </picture>
@@ -201,6 +218,10 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/catalog-6-desktop@1x.webp 1x, images/catalog-6-desktop@2x.webp 2x" width="169" height="196">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog-6-tablet@1x.webp 1x, images/catalog-6-tablet@2x.webp 2x" width="168" height="200">
+                <source type="image/webp" srcset="images/catalog-6-mobile@1x.webp 1x, images/catalog-6-mobile@2x.webp 2x" width="84" height="100">
+
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-6-desktop@1x.png 1x, images/catalog-6-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-6-tablet@1x.png 1x, images/catalog-6-tablet@2x.png 2x" width="168" height="200">
                 <img class="product-card__image" src="images/catalog-6-mobile@1x.png" srcset="images/catalog-6-mobile@2x.png 2x" alt="Синяя упаковка побольше" width="84" height="100">
@@ -231,6 +252,9 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog-7-tablet@1x.webp 1x, images/catalog-7-tablet@2x.webp 2x" width="164" height="175">
+                <source type="image/webp" srcset="images/catalog-7-mobile@1x.webp 1x, images/catalog-7-mobile@2x.webp 2x" width="72" height="84">
+
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-7-tablet@1x.png 1x, images/catalog-7-tablet@2x.png 2x" width="164" height="175">
                 <img class="product-card__image" src="images/catalog-7-mobile@1x.png" srcset="images/catalog-7-mobile@2x.png 2x" alt="Фиолетовая упаковка" width="72" height="84">
               </picture>
@@ -259,7 +283,7 @@
         <li class="catalog__item catalog__item--more">
           <div class="product-card product-card--more">
             <h3 class="product-card__title product-card__title--more">Показать еще 100500 товаров</h3>
-            <p class="product-card__desc ">
+            <p class="product-card__desc product-card__desc--more">
               На самом деле вкусов гораздо больше!
             </p>
             <a class="product-card__button button button--secondary" href="#">Показать все</a>
@@ -332,8 +356,12 @@
         <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=true"></script>
         <noscript>
           <picture>
-            <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
-            <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
+            <source type="image/webp" media="(min-width: 1000px)" srcset="images/map-desktop@1x.webp 1x, images/map-desktop@2x.webp 2x" width="1440" height="400">
+            <source type="image/webp" media="(min-width: 400px)" srcset="images/map-tablet@1x.webp 1x, images/map-tablet@2x.webp 2x" width="768" height="400">
+            <source type="image/webp" srcset="images/map-mobile@1x.webp 1x, images/map-mobile@2x.webp 2x" width="320" height="362">
+
+            <source type="image/jpeg" media="(min-width: 1000px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
+            <source type="image/jpeg" media="(min-width: 400px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
             <img class="contacts__map-image" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" alt="Адрес на карте" width="320" height="362">
           </picture>
         </noscript>
@@ -345,7 +373,6 @@
     <div class="main-footer__container container">
 
       <a class="main-footer__logo logo" href="index.html">
-        <!-- <img class="logo__text" src="images/logo-footer-mobile.svg" alt="Cat Energy" width="128" height="24"> -->
         <svg class="logo__text" width="128" height="24" viewBox="0 0 128 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path d="M1.62 21.96a9.43 9.43 0 0 1-1.6-5.72v-8.48a9.56 9.56 0 0 1 1.5-5.82c1.1-1.33 2.8-1.94 5.31-1.94 2.5 0 4.1.61 5.1 1.74a7.43 7.43 0 0 1 1.51 5v2.04h-4.9v-2.35a5.4 5.4 0 0 0-.3-2.04 1.42 1.42 0 0 0-1.4-.82c-.71 0-1.21.2-1.41.72a6.72 6.72 0 0 0-.3 2.25v10.92a4.3 4.3 0 0 0 .4 2.15c.2.5.7.71 1.4.71s1.1-.2 1.3-.71c.23-.7.33-1.42.3-2.15v-2.45h4.91v2.05a7.92 7.92 0 0 1-1.5 5.1c-1 1.23-2.7 1.84-5.1 1.84-2.41-.1-4.22-.71-5.22-2.04Zm17.73-21.66h5.7l4.21 23.3h-4.6l-.8-4.91h-3.31l-.8 4.9h-4.7l4.3-23.28Zm4.1 15.33-1.2-9.1-1.2 9.1h2.4Zm9.32-11.44h-3.4v-3.88h11.9v3.78h-3.4v19.5h-5.1v-19.4Zm17.63-3.89h8.8v2.46h-5.7v7.66h4.6v2.35h-4.6v8.57h5.7v2.35h-8.9v-23.38h.1Zm11.4 0h2.21l6.51 15.43v-15.42h2.6v23.28h-2l-6.6-15.93v15.93h-2.71v-23.28Zm14.33 0h8.81v2.46h-5.7v7.66h4.6v2.35h-4.6v8.57h5.7v2.35h-8.81v-23.38Zm11.41 0h4.61a7.9 7.9 0 0 1 5.1 1.44c1.1.92 1.6 2.55 1.6 4.7 0 2.96-.9 4.8-2.8 5.4l3.21 11.65h-3.1l-3-10.93h-2.51v10.93h-3.2v-23.18h.1Zm4.41 10.01c1.03.1 2.06-.2 2.9-.81.6-.51.9-1.53.9-3.07a6.72 6.72 0 0 0-.3-2.24 2.58 2.58 0 0 0-1.1-1.23 4.49 4.49 0 0 0-2.2-.4h-1.4v7.65h1.2v.1Zm10.91 11.55a10.49 10.49 0 0 1-1.4-5.93v-7.76a17 17 0 0 1 .5-4.4c.34-1.06 1-2 1.9-2.65 1.12-.67 2.41-1 3.71-.92 2.1 0 3.6.51 4.5 1.64a7.93 7.93 0 0 1 1.41 5.1v.82h-3v-.71c0-.86-.07-1.71-.2-2.56a2.05 2.05 0 0 0-.8-1.32 3.05 3.05 0 0 0-1.9-.51 2.96 2.96 0 0 0-2.01.6 2.3 2.3 0 0 0-.8 1.64c-.13.92-.2 1.84-.2 2.76v8.68a9.43 9.43 0 0 0 .6 3.88c.4.82 1.2 1.12 2.4 1.12a2.38 2.38 0 0 0 2.4-1.22c.53-1.3.77-2.69.7-4.09v-1.63h-2.9v-2.35h5.81v11.54h-2l-.3-2.65a4.17 4.17 0 0 1-1.56 2.2c-.74.53-1.64.8-2.55.76a4.92 4.92 0 0 1-4.3-2.04Zm17.13-6.44-4.9-15.01h3l3.5 11.23 3.4-11.23h3.01l-4.9 15.01v8.17h-3.01v-8.17h-.1Z" />
         </svg>
