--- a/source/index.html
+++ b/source/index.html
@@ -47,18 +47,20 @@
       </nav>
     </div>
 
-    <!-- <section class="index-header__hero"> -->
     <div class="index-header__hero-text-wrap">
       <h1 class="index-header__hero-title section-title">Функциональное питание для котов</h1>
       <p class="index-header__hero-desc">Занялся собой? Займись котом!</p>
     </div>
     <picture>
+      <source type="image/webp" media="(min-width: 1440px)" srcset="images/hero-desktop@1x.webp 1x, images/hero-desktop@2x.webp 2x" width="552" height="499">
+      <source type="image/webp" media="(min-width: 768px)" srcset="images/hero-tablet@1x.webp 1x, images/hero-tablet@2x.webp 2x" width="709" height="609">
+      <source type="image/webp" srcset="images/hero-mobile@1x.webp 1x, images/hero-mobile@2x.webp 2x" width="280" height="270">
+
       <source type="image/png" media="(min-width: 1440px)" srcset="images/hero-desktop@1x.png 1x, images/hero-desktop@2x.png 2x" width="552" height="499">
       <source type="image/png" media="(min-width: 768px)" srcset="images/hero-tablet@1x.png 1x, images/hero-tablet@2x.png 2x" width="709" height="609">
       <img class="index-header__hero-image" src="images/hero-mobile@1x.png" srcset="images/hero-mobile@2x.png 2x" alt="Упаковка еды Cat Energy Курица" width="280" height="270">
     </picture>
     <a class="index-header__hero-button button" href="#">Подобрать программу</a>
-    <!-- </section> -->
   </header>
 
   <main class="main-container">
@@ -101,7 +103,6 @@
     </section>
 
     <section class="live-example">
-      <!-- <div class="live-example__container container"> -->
       <h2 class="live-example__title section-title">Живой пример</h2>
 
       <p class="live-example__desc">Борис сбросил 5 кг за 2 месяца, просто заменив свой
@@ -123,12 +124,18 @@
       </dl>
       <div class="live-example__slider compare-slider">
         <picture>
+          <source type="image/webp" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.webp 1x, images/cat-before-tablet@2x.webp 2x" width="560" height="512">
+          <source type="image/webp" srcset="images/cat-before-mobile@1x.webp 1x, images/cat-before-mobile@2x.webp 2x" width="280" height="256">
+
           <source type="image/png" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.png 1x, images/cat-before-tablet@2x.png 2x" width="560" height="512">
-          <img class="compare-slider__image compare-slider__image--before" src="images/cat-before-mobile@1x.png" srcset="images/cat-before-mobile@2x.png 2x" alt="Толстый кот" width="280" height="256" style="width: 50%;">
+          <img class="compare-slider__image compare-slider__image--before" src="images/cat-before-mobile@1x.png" srcset="images/cat-before-mobile@2x.png 2x" alt="Толстый кот" width="280" height="256">
         </picture>
         <picture>
+          <source type="image/webp" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.webp 1x, images/cat-after-tablet@2x.webp 2x" width="560" height="512">
+          <source type="image/webp" srcset="images/cat-after-mobile@1x.webp 1x, images/cat-after-mobile@2x.webp 2x" width="280" height="256">
+
           <source type="image/png" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.png 1x, images/cat-after-tablet@2x.png 2x" width="560" height="512">
-          <img class="compare-slider__image compare-slider__image--after" src="images/cat-after-mobile@1x.png" srcset="images/cat-after-mobile@2x.png 2x" alt="Худой кот" width="280" height="256" style="width: 50%;">
+          <img class="compare-slider__image compare-slider__image--after" src="images/cat-after-mobile@1x.png" srcset="images/cat-after-mobile@2x.png 2x" alt="Худой кот" width="280" height="256">
         </picture>
         <button class="compare-slider__control-button" type="button">
           <span class="visually-hidden">
@@ -136,7 +143,6 @@
           </span>
         </button>
       </div>
-      <!-- </div> -->
 
     </section>
 
@@ -152,8 +158,12 @@
         <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=true"></script>
         <noscript>
           <picture>
-            <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
-            <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
+            <source type="image/webp" media="(min-width: 1000px)" srcset="images/map-desktop@1x.webp 1x, images/map-desktop@2x.webp 2x" width="1440" height="400">
+            <source type="image/webp" media="(min-width: 400px)" srcset="images/map-tablet@1x.webp 1x, images/map-tablet@2x.webp 2x" width="768" height="400">
+            <source type="image/webp" srcset="images/map-mobile@1x.webp 1x, images/map-mobile@2x.webp 2x" width="320" height="362">
+
+            <source type="image/jpeg" media="(min-width: 1000px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
+            <source type="image/jpeg" media="(min-width: 400px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
             <img class="contacts__map-image" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" alt="Адрес на карте" width="320" height="362">
           </picture>
         </noscript>
