--- a/source/catalog.html
+++ b/source/catalog.html
@@ -61,7 +61,7 @@
                 <source type="image/webp" srcset="images/catalog-1-mobile@1x.webp 1x, images/catalog-1-mobile@2x.webp 2x" width="68" height="86">
 
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-1-tablet@1x.png 1x, images/catalog-1-tablet@2x.png 2x" width="161" height="172">
-                <img class="product-card__image" src="images/catalog-1-mobile@1x.png" srcset="images/catalog-1-mobile@2x.png 2x" alt="Оранжевая упаковка" width="68" height="86">
+                <img class="product-card__image" src="images/catalog-1-mobile@1x.png" srcset="images/catalog-1-mobile@2x.png 2x" alt="Оранжевая упаковка" width="68" height="86" loading="lazy">
               </picture>
             </a>
             <a class="product-card__link-title" href="#">
@@ -94,7 +94,7 @@
 
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-2-desktop@1x.png 1x, images/catalog-2-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="168" height="206">
-                <img class="product-card__image" src="images/catalog-2-mobile@1x.png" srcset="images/catalog-2-mobile@2x.png 2x" alt="Оранжевая упаковка побольше" width="84" height="100">
+                <img class="product-card__image" src="images/catalog-2-mobile@1x.png" srcset="images/catalog-2-mobile@2x.png 2x" alt="Оранжевая упаковка побольше" width="84" height="100" loading="lazy">
               </picture>
             </a>
             <a class="product-card__link-title" href="#">
@@ -126,7 +126,7 @@
                 <source type="image/webp" srcset="images/catalog-3-mobile@1x.webp 1x, images/catalog-3-mobile@2x.webp 2x" width="68" height="78">
 
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-3-tablet@1x.png 1x, images/catalog-3-tablet@2x.png 2x" width="164" height="175">
-                <img class="product-card__image" src="images/catalog-3-mobile@1x.png" srcset="images/catalog-3-mobile@2x.png 2x" alt="Зеленая упаковка" width="68" height="78">
+                <img class="product-card__image" src="images/catalog-3-mobile@1x.png" srcset="images/catalog-3-mobile@2x.png 2x" alt="Зеленая упаковка" width="68" height="78" loading="lazy">
               </picture>
             </a>
             <a class="product-card__link-title" href="#">
@@ -160,7 +160,7 @@
 
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-4-desktop@1x.png 1x, images/catalog-4-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-4-tablet@1x.png 1x, images/catalog-4-tablet@2x.png 2x" width="168" height="200">
-                <img class="product-card__image" src="images/catalog-4-mobile@1x.png" srcset="images/catalog-4-mobile@2x.png 2x" alt="Зеленая упаковка побольше" width="84" height="100">
+                <img class="product-card__image" src="images/catalog-4-mobile@1x.png" srcset="images/catalog-4-mobile@2x.png 2x" alt="Зеленая упаковка побольше" width="84" height="100" loading="lazy">
               </picture>
             </a>
             <a class="product-card__link-title" href="#">
@@ -192,7 +192,7 @@
                 <source type="image/webp" srcset="images/catalog-5-mobile@1x.webp 1x, images/catalog-5-mobile@2x.webp 2x" width="68" height="78">
 
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-5-tablet@1x.png 1x, images/catalog-5-tablet@2x.png 2x" width="161" height="172">
-                <img class="product-card__image" src="images/catalog-5-mobile@1x.png" srcset="images/catalog-5-mobile@2x.png 2x" alt="Синяя упаковка" width="68" height="78">
+                <img class="product-card__image" src="images/catalog-5-mobile@1x.png" srcset="images/catalog-5-mobile@2x.png 2x" alt="Синяя упаковка" width="68" height="78" loading="lazy">
               </picture>
             </a>
             <a class="product-card__link-title" href="#">
@@ -226,7 +226,7 @@
 
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-6-desktop@1x.png 1x, images/catalog-6-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-6-tablet@1x.png 1x, images/catalog-6-tablet@2x.png 2x" width="168" height="200">
-                <img class="product-card__image" src="images/catalog-6-mobile@1x.png" srcset="images/catalog-6-mobile@2x.png 2x" alt="Синяя упаковка побольше" width="84" height="100">
+                <img class="product-card__image" src="images/catalog-6-mobile@1x.png" srcset="images/catalog-6-mobile@2x.png 2x" alt="Синяя упаковка побольше" width="84" height="100" loading="lazy">
               </picture>
             </a>
             <a class="product-card__link-title" href="#">
@@ -258,7 +258,7 @@
                 <source type="image/webp" srcset="images/catalog-7-mobile@1x.webp 1x, images/catalog-7-mobile@2x.webp 2x" width="72" height="84">
 
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-7-tablet@1x.png 1x, images/catalog-7-tablet@2x.png 2x" width="164" height="175">
-                <img class="product-card__image" src="images/catalog-7-mobile@1x.png" srcset="images/catalog-7-mobile@2x.png 2x" alt="Фиолетовая упаковка" width="72" height="84">
+                <img class="product-card__image" src="images/catalog-7-mobile@1x.png" srcset="images/catalog-7-mobile@2x.png 2x" alt="Фиолетовая упаковка" width="72" height="84" loading="lazy">
               </picture>
             </a>
             <a class="product-card__link-title" href="#">
@@ -364,7 +364,7 @@
 
             <source type="image/jpeg" media="(min-width: 1000px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
             <source type="image/jpeg" media="(min-width: 400px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
-            <img class="contacts__map-image" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" alt="Адрес на карте" width="320" height="362">
+            <img class="contacts__map-image" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" alt="Адрес на карте" width="320" height="362" loading="lazy">
           </picture>
         </noscript>
       </div>
